# tristool

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs
src/git/: create_git_repo.rs  mod.rs
src/stacks/: create_c.rs  create_cpp.rs  create_expo.rs  create_nestjs.rs  create_nextjs.rs  create_rust.rs  mod.rs
src/utils/: list_projects.rs  mod.rs  project_manager.rs
