[package]
name = "tristool"
version = "1.0.0"
edition = "2024"
authors = ["Tristan gory"]
description = "A tool to create and manage projects."
license = "MIT"
repository = "https://github.com/Tetris14/tristool"

[dependencies]
clap = "4.5.34"
console = "0.15.11"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
chrono = "0.4.40"
